Fixed spacing issue on industries

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -90,7 +90,8 @@
 	}
 
 	small {
-		font-size: 0.6em;
+		font-size: 0.8em;
+		margin-bottom: 1em;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
